--- a/src/index.css
+++ b/src/index.css
@@ -78,19 +78,15 @@
   }
 }
 
-* {
-  /* box-sizing: border-box; */
-  scroll-behavior: smooth;
-  color-scheme: dark;
-}
-
 html,
 body,
 #root {
-  position: fixed;
+  display: fixed;
   width: 100%;
   height: 100vh;
   color: white;
+  background-color: rgb(53, 53, 53);
+  scrollbar-color: transparent transparent;
 }
 
 /* Position fixed on the root elements allows responsivity with mobile view browser bar */
